Implementação das configurações do AWS S3, para o armazenamento em nuvem das imagens da applicação

--- a/.env_sample
+++ b/.env_sample
@@ -1,9 +1,13 @@
-#SERVER CONFIG
-
 PORT = 
+SECRET_TOKEN = 
 
 # DATABASE CONFIG
-
 DB_USER = 
 DB_NAME = 
 DB_PASSWORD = 
+
+#AWS S3
+AWS_PUBLIC = 
+AWS_SECRET = 
+AWS_REGION = 
+AWS_BUCKET_NAME = 
