--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validation": "^4.1.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer-s3": "^3.0.1",
