--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "morgan": "^1.10.0",
     "multer-s3": "^3.0.1",
     "pg": "^8.12.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
